--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="row">
       <!-- TRABALHO 1 -->
       <div class="col-md-6" >
-        <a href="">
+        <a href="portfolio.html">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1" >
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -80,7 +80,8 @@
 
       <!-- TRABALHO 2 -->
       <div class="col-md-6 m-adjust-mobile">
-        <a href="">
+        <a href="portfolio.html">
+          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
@@ -93,7 +94,8 @@
     <div class="row">
       <!-- TRABALHO 3 -->
       <div class="col-md-12">
-        <a href="">
+        <a href="portfolio.html">
+          <!-- <div class="col-md-12 job job-type2" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type2">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
@@ -106,7 +108,8 @@
     <div class="row hidden-mobile">
       <!-- TRABALHO 4 -->
       <div class="col-md-4">
-        <a href="">
+        <a href="portfolio.html">
+          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
@@ -117,7 +120,8 @@
 
       <!-- TRABALHO 5 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="">
+        <a href="portfolio.html">
+          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
@@ -128,7 +132,8 @@
 
       <!-- TRABALHO 6 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="">
+        <a href="portfolio.html">
+          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
