--- a/sobre.html
+++ b/sobre.html
@@ -63,7 +63,8 @@
     <div class="row">
       <!-- TRABALHO 4 -->
       <div class="col-md-4">
-        <a href="">
+        <a href="portfolio.html">
+          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
@@ -74,7 +75,8 @@
 
       <!-- TRABALHO 5 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="">
+        <a href="portfolio.html">
+          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
@@ -85,7 +87,8 @@
 
       <!-- TRABALHO 6 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="">
+        <a href="portfolio.html">
+          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
