--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
   <!-- SEÇÃO: DETALHE -->
   <div id="sec-detail" class="sec-featured bg-color-nv5">
     <section class="container text-center">
-      <h3 class="color-nv2">Matemática</h3>
+      <h3 class="color-nv2">Lorem ipsum</h3>
       <hr class="hr-type1 color-nv4">
 
       <div class="row text-left color-nv2">
