Atualização geral de imagens e textos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <!-- NAVEGAÇÃO -->
   <nav id="navagation" class="container navbar navbar-expand-sm">
     <a href="">
-      <h1><span class="logo-part1 color-nv3">eu</span><span class="logo-part2 color-nv1">CHICO</span></h1>
+      <h1>
+        <span class="logo-part1 color-nv3">eu</span><span class="logo-part2 color-nv1">CHICO</span>
+      </h1>
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
@@ -51,11 +53,13 @@
         <h2 class="color-nv1">Francisco de Paula</h2>
         <h3 class="color-nv2">Desenvolvedor Web</h3>
         <hr class="hr-type1 color-nv4">
-        <p class="txt-featured color-nv2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis arcu arcu, egestas et lectus non, porta convallis turpis. Sed mollis nisi id nibh porttitor facilisis. </p>
+        <p class="txt-featured color-nv2">
+          Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.
+        </p>
       </div>
 
       <div class="col-md-5">
-        <img class="img-profile" src="images/profile.png">
+        <img class="img-profile" src="images/euchico-perfil-1.jpg" alt="Arte Avatar euChico">
       </div>
     </div>
 
@@ -68,7 +72,7 @@
     <div class="row">
       <!-- TRABALHO 1 -->
       <div class="col-md-6" >
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1" >
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -80,7 +84,7 @@
 
       <!-- TRABALHO 2 -->
       <div class="col-md-6 m-adjust-mobile">
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -94,7 +98,7 @@
     <div class="row">
       <!-- TRABALHO 3 -->
       <div class="col-md-12">
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type2" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type2">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -108,7 +112,7 @@
     <div class="row hidden-mobile">
       <!-- TRABALHO 4 -->
       <div class="col-md-4">
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -120,7 +124,7 @@
 
       <!-- TRABALHO 5 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -132,7 +136,7 @@
 
       <!-- TRABALHO 6 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -150,12 +154,25 @@
     <hr class="hr-type2 color-nv4">
 
     <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
+    
     <hr class="hr-type1 color-nv4">
-    <span class="email color-nv1">eu.francisco@outlook.com</span>
+
+    <a href="mailto:eu.francisco@outlook.com">
+      <span class="email color-nv2">eu.francisco@outlook.com</span>
+    </a> 
+
     <div class="social">          
-      <a href=""><img src="images/social-github.png"></a>
-      <a href=""><img src="images/social-mastodon.png" alt=""></a>
-      <a href=""><img src="images/social-linkedin.png" alt=""></a>
+      <a href="https://github.com/euchico" target="_blank">
+        <img src="images/social-github.png" alt="GitHub: @euchico">
+      </a>
+
+      <a href="https://mastodon.social/@euchico" rel="me" target="_blank">
+        <img src="images/social-mastodon.png" alt="Mastodon: @euchico">
+      </a>
+
+      <a href="https://www.linkedin.com/in/euchico/" target="_blank">
+        <img src="images/social-linkedin.png" alt="LinkedIn: @euchico">
+      </a>
     </div>
   </footer>
   <!-- / RODAPÉ -->
