--- a/portfolio.html
+++ b/portfolio.html
@@ -152,12 +152,25 @@
     <hr class="hr-type2 color-nv4">
 
     <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
+    
     <hr class="hr-type1 color-nv4">
-    <span class="email color-nv1">eu.francisco@outlook.com</span>
+
+    <a href="mailto:eu.francisco@outlook.com">
+      <span class="email color-nv2">eu.francisco@outlook.com</span>
+    </a>
+
     <div class="social">          
-      <a href=""><img src="images/social-github.png"></a>
-      <a href=""><img src="images/social-mastodon.png" alt=""></a>
-      <a href=""><img src="images/social-linkedin.png" alt=""></a>
+      <a href="https://github.com/euchico" target="_blank">
+        <img src="images/social-github.png" alt="GitHub: @euchico">
+      </a>
+
+      <a href="https://mastodon.social/@euchico" rel="me" target="_blank">
+        <img src="images/social-mastodon.png" alt="Mastodon: @euchico">
+      </a>
+
+      <a href="https://www.linkedin.com/in/euchico/" target="_blank">
+        <img src="images/social-linkedin.png" alt="LinkedIn: @euchico">
+      </a>
     </div>
   </footer>
   <!-- / RODAPÉ -->
