--- a/sobre.html
+++ b/sobre.html
@@ -49,21 +49,26 @@
   <!-- SEÇÃO: BIOGRAFIA -->
   <section id="sec-biography" class="container sec-base">
     <div class="text-center">
-      <img class="img-profile" src="images/profile.png">
+      <img class="img-profile" src="images/euchico-perfil-2.jpg" alt="Avatar euChico">
 
       <h3 class="color-nv1">Francisco de Paula</h3>
 
       <hr class="hr-type1 color-nv4">
     </div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p class="text-justify">
+      Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 30 anos. Sou programador, ou melhor, estou envolvido com desenvolvimento há 10 anos. Minha trajetória não é linear, por isso minhas frases preferidas é “Quando a gente anda sempre em frente, não pode ir muito longe…” (Saint-Exupéry).
+      <br><br>
+      Desenho desde bem pequeno e a arte sempre me acompanhou, mas meu primeiro curso superior foi exatamente Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolhida fez muito sentido. Foi um ótimo curso, mas esse período teve alguns pontos baixos que resultaram no trancamento da graduação. A Licenciatura em Matemática, um novo curso, em uma nova faculdade, representou um momento de subida, a combinação perfeita pra mim das áreas de humanas com a Educação e exatas com a Matemática.
+      <br><br>
+      Nunca deixei a programação e constantemente tentei utilizar os conhecimentos na minha vida, acadêmica e cotidiana. Isso me fez retornar aos estudos e o desejo que encontrar novas oportunidades com os códigos. Esse site é um espaço para compartilhar essa trajetória de estudos e apresentar projetos, pessoais e profissionais, realizados. Mais informações ou detalhes estarão descritos no <a href="blog.html" target="_self"><strong>Blog</strong></a> e no <a href="curriculo.html" target="_self"><strong>Currículo</strong></a>.
+    </p>
 
     <!-- PORTFÓLIO -->
     <div class="row">
       <!-- TRABALHO 4 -->
       <div class="col-md-4">
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -75,7 +80,7 @@
 
       <!-- TRABALHO 5 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -87,7 +92,7 @@
 
       <!-- TRABALHO 6 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="portfolio.html">
+        <a href="#">
           <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
           <div class="col-md-12 job job-type1">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -106,11 +111,16 @@
     <section id="sec-math" class="container text-center">
       <h3 class="color-nv5">Matemática</h3>
       <hr class="hr-type1 color-nv4">
-      <p class="text-left w-75 mx-auto color-nv5">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+
+      <p class="text-justify w-75 mx-auto  color-nv5">
+        "O curso de Matemática, Licenciatura, objetiva a formação do Professor de Matemática para os Anos Finais do Ensino Fundamental, Ensino Médio e Educação Profissional; possibilitando ao graduando a aquisição de amplo domínio teórico, experimental e pedagógico da Matemática, além do desenvolvimento de postura investigativa, ética, crítica e capaz de produzir e disseminar conhecimentos científicos e tecnológicos" (IFRJ).
+        <br><br>
+        Essa definição está totalmente ligada as características necessárias em várias áreas da vida, e para programação não é diferente. A Matemática é algo fundamental para Computação e acredito que construí (e continuo construindo) uma boa base para o Desenvolvimento Web.
       </p>
-      <a href=""><img src="images/icon-ifrj.png"></a>
+
+      <a href="https://portal.ifrj.edu.br/" target="_blank">
+        <img src="images/icon-ifrj.png" alt="Logo Branco IFRJ">
+      </a>
     </section>
   </div>
   <!-- / SEÇÃO: MATEMÁTICA -->
@@ -122,21 +132,25 @@
     <hr class="hr-type1 color-nv4">
 
     <div class="social">          
-      <a href=""><img src="images/social-instagram.png"></a>
-      <a href=""><img src="images/social-artstation.png" alt=""></a>
-      <a href=""><img src="images/social-twitter.png" alt=""></a>
+      <a href="https://www.instagram.com/euchico.artes/" target="_blank">
+        <img src="images/social-instagram.png" alt="Instagram: @euchico.artes">
+      </a>
+      
+      <a href="https://www.artstation.com/euchico" target="_blank">
+        <img src="images/social-artstation.png" alt="ArtStation: @euchico">
+      </a>
     </div>
 
     <div class="row gallery">
-      <img class="col-sm-4 img-fluid" src="images/arte.png">
-      <img class="col-sm-4 img-fluid" src="images/arte.png">
-      <img class="col-sm-4 img-fluid" src="images/arte.png">
+      <img class="col-sm-4 img-fluid" src="images/euchico-arte-1.jpg" alt="Cartola, Arte por euChico">
+      <img class="col-sm-4 img-fluid" src="images/euchico-arte-2.jpg" alt="Hanna Lashay, Arte por euChico">
+      <img class="col-sm-4 img-fluid" src="images/euchico-arte-3.jpg" alt="Louis Armstrong, Arte por euChico">
     </div>
 
     <div class="row gallery hidden-mobile">
-      <img class="col-sm-4 img-fluid" src="images/arte.png">
-      <img class="col-sm-4 img-fluid" src="images/arte.png">
-      <img class="col-sm-4 img-fluid" src="images/arte.png">
+      <img class="col-sm-4 img-fluid" src="images/euchico-arte-4.jpg" alt="Talita Barbosa, Arte por euChico">
+      <img class="col-sm-4 img-fluid" src="images/euchico-arte-5.jpg" alt="John Lennon, Arte por euChico">
+      <img class="col-sm-4 img-fluid" src="images/euchico-arte-6.jpg" alt="Flavia Machado, Arte por euChico">
     </div>
   </section>
   <!-- / SEÇÃO: ARTE -->
@@ -146,12 +160,25 @@
     <hr class="hr-type2 color-nv4">
 
     <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
+    
     <hr class="hr-type1 color-nv4">
-    <span class="email color-nv1">eu.francisco@outlook.com</span>
+
+    <a href="mailto:eu.francisco@outlook.com">
+      <span class="email color-nv2">eu.francisco@outlook.com</span>
+    </a>
+
     <div class="social">          
-      <a href=""><img src="images/social-github.png"></a>
-      <a href=""><img src="images/social-mastodon.png" alt=""></a>
-      <a href=""><img src="images/social-linkedin.png" alt=""></a>
+      <a href="https://github.com/euchico" target="_blank">
+        <img src="images/social-github.png" alt="GitHub: @euchico">
+      </a>
+
+      <a href="https://mastodon.social/@euchico" rel="me" target="_blank">
+        <img src="images/social-mastodon.png" alt="Mastodon: @euchico">
+      </a>
+
+      <a href="https://www.linkedin.com/in/euchico/" target="_blank">
+        <img src="images/social-linkedin.png" alt="LinkedIn: @euchico">
+      </a>
     </div>
   </footer>
   <!-- / RODAPÉ -->
