Correção de textos

--- a/curriculo.html
+++ b/curriculo.html
@@ -270,7 +270,7 @@
             <div id="collapse-4" class="collapse">
               <p class="text-justify">
                 Para estar realmente atualizado e evoluindo no Desenvolvimento Web, ou qualquer área de conhecimento, é fundamental a criação de projetos e realização estudos pessoais.
-                Minha trajetória de estudo fora das salas de aula será, sempre que possível, compartilhada no <strong><a href="https://github.com/euchico/webdev" target="_blank">GitHub</a></strong> e no <strong><a href="https://medium.com/@euchico" target="_blank">Blog</a></strong>.
+                Minha trajetória de estudo fora das salas de aula será, sempre que possível, compartilhada no <strong><a href="https://github.com/euchico/webdev" target="_blank">GitHub</a></strong> e no <strong><a href="blog.html" target="_self">Blog</a></strong>.
               </p>
             </div>
           </div>
