--- a/sobre.html
+++ b/sobre.html
@@ -57,11 +57,11 @@
     </div>
 
     <p class="text-justify">
-      Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 30 anos. Sou programador, ou melhor, estou envolvido com desenvolvimento há 10 anos. Minha trajetória não é linear, por isso minhas frases preferidas é “Quando a gente anda sempre em frente, não pode ir muito longe…” (Saint-Exupéry).
+      Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 30 anos. Estou na área de desenvolvimento há cerca de 10 anos, porém minha trajetória não é linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…” (Saint-Exupéry).
       <br><br>
-      Desenho desde bem pequeno e a arte sempre me acompanhou, mas meu primeiro curso superior foi exatamente Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolhida fez muito sentido. Foi um ótimo curso, mas esse período teve alguns pontos baixos que resultaram no trancamento da graduação. A Licenciatura em Matemática, um novo curso, em uma nova faculdade, representou um momento de subida, a combinação perfeita pra mim das áreas de humanas com a Educação e exatas com a Matemática.
+      Desde pequeno desenho e me interesso por arte, chegando a pensar em seguir no Desenho Industrial. Contudo, a escolha para o meu primeiro curso superior foi Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolhida fez muito sentido e hoje percebo que não preciso estar totalmente longe da arte. Foi um ótimo curso, mas esse período teve alguns pontos baixos que resultaram no trancamento da graduação. Posteriormente, a Licenciatura em Matemática, um novo curso, em uma nova faculdade, representou um momento de subida, a combinação perfeita das áreas de humanas com a Educação e exatas com a Matemática.
       <br><br>
-      Nunca deixei a programação e constantemente tentei utilizar os conhecimentos na minha vida, acadêmica e cotidiana. Isso me fez retornar aos estudos e o desejo que encontrar novas oportunidades com os códigos. Esse site é um espaço para compartilhar essa trajetória de estudos e apresentar projetos, pessoais e profissionais, realizados. Mais informações ou detalhes estarão descritos no <a href="blog.html" target="_self"><strong>Blog</strong></a> e no <a href="curriculo.html" target="_self"><strong>Currículo</strong></a>.
+      Nunca deixei a programação e constantemente tento utilizar os conhecimentos na minha vida, acadêmica e cotidiana. Isso fez retornar o estudo e o desejo que encontrar novas oportunidades com os códigos. Esse site é um espaço para compartilhar minha trajetória de estudos e apresentar projetos, pessoais e profissionais. Todos os detalhes e informações estarão descritos no <a href="blog.html" target="_self"><strong>Blog</strong></a> e no <a href="curriculo.html" target="_self"><strong>Currículo</strong></a>.
     </p>
 
     <!-- PORTFÓLIO -->
