Remoção de textos justificado

--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
         <span class="post-author color-nv3">por Francisco de Paula</span>
         <span class="post-date color-nv3">00 de Mês de 0000</span>
         
-        <p class="text-justify post-resume color-nv2">
+        <p class="text-left post-resume color-nv2">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...
           <!-- <a href="postagem.html"> --> <a href="#"><strong>Leia Mais!</strong></a> 
         </p>
