--- a/sobre.html
+++ b/sobre.html
@@ -56,7 +56,7 @@
       <hr class="hr-type1 color-nv4">
     </div>
 
-    <p class="text-justify">
+    <p class="">
       Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 30 anos. Estou na área de desenvolvimento há cerca de 10 anos, porém minha trajetória não é linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…” (Saint-Exupéry).
       <br><br>
       Desde pequeno desenho e me interesso por arte, chegando a pensar em seguir no Desenho Industrial. Contudo, a escolha para o meu primeiro curso superior foi Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolhida fez muito sentido e hoje percebo que não preciso estar totalmente longe da arte. Foi um ótimo curso, mas esse período teve alguns pontos baixos que resultaram no trancamento da graduação. Posteriormente, a Licenciatura em Matemática, um novo curso, em uma nova faculdade, representou um momento de subida, a combinação perfeita das áreas de humanas com a Educação e exatas com a Matemática.
@@ -112,7 +112,7 @@
       <h3 class="color-nv5">Matemática</h3>
       <hr class="hr-type1 color-nv4">
 
-      <p class="text-justify w-75 mx-auto  color-nv5">
+      <p class="text-left w-75 mx-auto color-nv5">
         "O curso de Matemática, Licenciatura, objetiva a formação do Professor de Matemática para os Anos Finais do Ensino Fundamental, Ensino Médio e Educação Profissional; possibilitando ao graduando a aquisição de amplo domínio teórico, experimental e pedagógico da Matemática, além do desenvolvimento de postura investigativa, ética, crítica e capaz de produzir e disseminar conhecimentos científicos e tecnológicos" (IFRJ).
         <br><br>
         Essa definição está totalmente ligada as características necessárias em várias áreas da vida, e para programação não é diferente. A Matemática é algo fundamental para Computação e acredito que construí (e continuo construindo) uma boa base para o Desenvolvimento Web.
