Adição de metatags

--- a/sobre.html
+++ b/sobre.html
@@ -4,6 +4,24 @@
 	<!-- METAs -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO -->
+  <meta http-equiv="content-language" content="pt-br">
+  <meta name="author" content="Francisco de Paula (euChico)">
+  <meta name="description" content="Francisco de Paula, minha trajetória não é linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…”.">
+  <meta name="creator" content="Francisco de Paula (euChico)">
+  <meta name="robots" content="index, follow">
+
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="euCHICO - Sobre">
+  <meta property="og:description" content="Francisco de Paula, minha trajetória não é linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…”.">
+  <meta property="og:url" content="https://euchico.github.io/">
+  <meta property="og:site_name" content="euCHICO">
+  <meta property="og:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
+  <meta property="og:image:width" content="300">
+  <meta property="og:image:height" content="300">
+  <!-- / SEO -->
   <!-- / METAs -->
 
 	<!-- ESTILOS -->
