--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 	<!-- METAS -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO -->
+  <meta http-equiv="content-language" content="pt-br">
+  <meta name="author" content="Francisco de Paula (euChico)">
+  <meta name="description" content="Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.">
+  <meta name="creator" content="Francisco de Paula (euChico)">
+  <meta name="robots" content="index, follow">
+
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="euCHICO - Francisco de Paula">
+  <meta property="og:description" content="Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.">
+  <meta property="og:url" content="https://euchico.github.io/">
+  <meta property="og:site_name" content="euCHICO">
+  <meta property="og:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
+  <meta property="og:image:width" content="300">
+  <meta property="og:image:height" content="300">
+  <!-- / SEO -->
   <!-- / METAS -->
 
 	<!-- ESTILOS -->
