--- a/curriculo.html
+++ b/curriculo.html
@@ -21,6 +21,13 @@
   <meta property="og:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
+
+  <meta name="twitter:card" value="summary">
+  <meta name="twitter:site" content="@_euchico">
+  <meta name="twitter:creator" content="@_euchico">
+  <meta name="twitter:title" content="euCHICO - Currículo">
+  <meta name="twitter:description" content="Curso Licenciatura em Matemática e sempre tive interesse em matemática, lógica, programação e encontrei a paixão pelo modo de pensar dentro dessas áreas.">
+  <meta name="twitter:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
   <!-- / SEO -->  
   <!-- / METAS -->
 
