--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
   <meta property="og:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
+
+  <meta name="twitter:card" value="summary">
+  <meta name="twitter:site" content="@_euchico">
+  <meta name="twitter:creator" content="@_euchico">
+  <meta name="twitter:title" content="euCHICO - Francisco de Paula">
+  <meta name="twitter:description" content="Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.">
+  <meta name="twitter:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
 
