--- a/sobre.html
+++ b/sobre.html
@@ -21,6 +21,13 @@
   <meta property="og:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
+
+  <meta name="twitter:card" value="summary">
+  <meta name="twitter:site" content="@_euchico">
+  <meta name="twitter:creator" content="@_euchico">
+  <meta name="twitter:title" content="euCHICO - Sobre">
+  <meta name="twitter:description" content="Francisco de Paula, minha trajetória não é linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…”.">
+  <meta name="twitter:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
   <!-- / SEO -->
   <!-- / METAs -->
 
