--- a/index.html
+++ b/index.html
@@ -137,11 +137,10 @@
     <div class="row hidden-mobile">
       <!-- TRABALHO 4 -->
       <div class="col-md-4">
-        <a href="#">
-          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
-          <div class="col-md-12 job job-type1">
+        <a href="https://github.com/euchico/webdev-study">
+          <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-study.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+            <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
           </div>
         </a>
       </div>
@@ -149,11 +148,10 @@
 
       <!-- TRABALHO 5 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="#">
-          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
-          <div class="col-md-12 job job-type1">
+        <a href="https://github.com/euchico/webdev-challenge">
+          <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-challenge.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+            <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
           </div>
         </a>
       </div>
@@ -161,11 +159,10 @@
 
       <!-- TRABALHO 6 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="#">
-          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
-          <div class="col-md-12 job job-type1">
+        <a href="https://github.com/euchico/webdev-cookbook">
+          <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-cookbook.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+            <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
           </div>
         </a>
       </div>
