Ajustes de endereço

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- / METAs -->
 
-	<!-- ESTILOS -->
-  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-  <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
-  <!-- / ESTILOS -->
+  <!-- SCRIPTS -->
+  <script src="https://kit.fontawesome.com/2afad5831f.js" crossorigin="anonymous" SameSite="none Secure"></script>
+  <!-- SCRIPTS -->
 
   <!-- FONTE -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <!-- / FONTE -->
 
-  <!-- SCRIPTS -->
-  <script src="https://kit.fontawesome.com/2afad5831f.js" crossorigin="anonymous"></script>
-  <!-- SCRIPTS -->
+	<!-- ESTILOS -->
+  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <!-- / ESTILOS -->
 
   <title>euCHICO - Portfólio</title>
 <head>
@@ -28,7 +28,7 @@
   <div class="bg-navagation bg-color-nv2">
     <!-- NAVEGAÇÃO -->
     <nav id="navagation" class="container navbar navbar-expand-sm">
-      <a href="index.html"><h1><span class="logo-part1 color-nv4">eu</span><span class="logo-part2 color-nv5">CHICO</span></h1></a>
+      <a href="/"><h1><span class="logo-part1 color-nv4">eu</span><span class="logo-part2 color-nv5">CHICO</span></h1></a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -36,9 +36,9 @@
 
       <div id="collapsingNavbar" class="navbar-collapse collapse ">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item color-nv5"><a class="nav-link txt-up" href="sobre.html">sobre</a></li>
-          <li class="nav-item color-nv5"><a class="nav-link txt-up" href="blog.html">blog</a></li>
-          <li class="nav-item color-nv5"><a class="nav-link txt-bold txt-up" href="curriculo.html">currículo</a></li>
+          <li class="nav-item color-nv5"><a class="nav-link txt-up" href="sobre">sobre</a></li>
+          <li class="nav-item color-nv5"><a class="nav-link txt-up" href="blog">blog</a></li>
+          <li class="nav-item color-nv5"><a class="nav-link txt-bold txt-up" href="curriculo">currículo</a></li>
         </ul>
       </div>
     </nav>
