--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
   <!-- / SEO -->
   <!-- / METAS -->
 
-	<!-- ESTILOS -->
-  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-  <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
-  <!-- / ESTILOS -->
+  <!-- SCRIPTS -->
+  <script src="https://kit.fontawesome.com/2afad5831f.js" crossorigin="anonymous" SameSite="none Secure"></script>
+  <!-- SCRIPTS -->
 
   <!-- FONTE -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <!-- / FONTE -->
 
-  <!-- SCRIPTS -->
-  <script src="https://kit.fontawesome.com/2afad5831f.js" crossorigin="anonymous"></script>
-  <!-- SCRIPTS -->
+	<!-- ESTILOS -->
+  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <!-- / ESTILOS -->
 
   <title>euCHICO - Francisco de Paula</title>
 <head>
@@ -51,7 +51,7 @@
 <body>
   <!-- NAVEGAÇÃO -->
   <nav id="navagation" class="container navbar navbar-expand-sm">
-    <a href="">
+    <a href="/">
       <h1>
         <span class="logo-part1 color-nv3">eu</span><span class="logo-part2 color-nv1">CHICO</span>
       </h1>
@@ -63,9 +63,9 @@
 
     <div id="collapsingNavbar" class="navbar-collapse collapse ">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item color-nv1"><a class="nav-link txt-up " href="sobre.html">sobre</a></li>
-        <li class="nav-item color-nv1"><a class="nav-link txt-up " href="blog.html">blog</a></li>
-        <li class="nav-item color-nv1"><a class="nav-link txt-bold txt-up " href="curriculo.html">currículo</a></li>
+        <li class="nav-item color-nv1"><a class="nav-link txt-up" href="sobre">sobre</a></li>
+        <li class="nav-item color-nv1"><a class="nav-link txt-up" href="blog">blog</a></li>
+        <li class="nav-item color-nv1"><a class="nav-link txt-bold txt-up" href="curriculo">currículo</a></li>
       </ul>
     </div>
   </nav>
