Adição da Moema

--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
       <!-- TRABALHO 3 -->
       <div class="col-md-12">
         <a href="#">
-          <!-- <div class="col-md-12 job job-type2" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
-          <div class="col-md-12 job job-type2">
+          <div class="col-md-12 job job-type2" style="background:transparent url('images/freelance.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+            <div class="job-btn job-btn-category">Freelance/Front-end</div>
           </div>
         </a>
       </div>
