Adição do do favicon e ajustes de imagens

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css">
   <!-- / ESTILOS -->
 
+  <link rel="icon" href="favicon.ico">
   <title>euCHICO - Francisco de Paula</title>
 <head>
 
@@ -123,7 +124,7 @@
     <div class="row">
       <!-- TRABALHO 3 -->
       <div class="col-md-12">
-        <a href="http://moemasantiago.com/">
+        <a href="http://moemasantiago.com/" target="_blank">
           <div class="col-md-12 job job-type2" style="background:transparent url('images/freelance.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Freelance/Front-end</div>
@@ -136,7 +137,7 @@
     <div class="row hidden-mobile">
       <!-- TRABALHO 4 -->
       <div class="col-md-4">
-        <a href="https://github.com/euchico/webdev-study">
+        <a href="https://github.com/euchico/webdev-study" target="_blank">
           <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-study.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
@@ -147,7 +148,7 @@
 
       <!-- TRABALHO 5 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="https://github.com/euchico/webdev-challenge">
+        <a href="https://github.com/euchico/webdev-challenge" target="_blank">
           <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-challenge.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
@@ -158,7 +159,7 @@
 
       <!-- TRABALHO 6 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="https://github.com/euchico/webdev-cookbook">
+        <a href="https://github.com/euchico/webdev-cookbook" target="_blank">
           <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-cookbook.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
