--- a/sobre.html
+++ b/sobre.html
@@ -45,6 +45,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css">
   <!-- / ESTILOS -->
 
+  <link rel="icon" href="favicon.ico">
   <title>euCHICO - Sobre</title>
 <head>
 
