--- a/postagem.html
+++ b/postagem.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css">
   <!-- / ESTILOS -->
 
+  <link rel="icon" href="favicon.ico">
   <title>euCHICO - Postagem</title>
 <head>
 
