Correção de link

--- a/sobre.html
+++ b/sobre.html
@@ -156,11 +156,7 @@
 
     <div class="social">          
       <a href="https://www.instagram.com/euchico.artes/" target="_blank">
-        <img src="images/social-instagram.png" alt="Instagram: @euchico.artes">
-      </a>
-      
-      <a href="https://www.artstation.com/euchico" target="_blank">
-        <img src="images/social-artstation.png" alt="ArtStation: @euchico">
+        <img src="images/social-instagram.png" alt="Instagram: @euchico.jpg">
       </a>
     </div>
 
