Ajustes de links de redes sociais

--- a/portfolio.html
+++ b/portfolio.html
@@ -158,19 +158,19 @@
 
     <a href="mailto:eu.francisco@outlook.com">
       <span class="email color-nv2">eu.francisco@outlook.com</span>
-    </a>
+    </a> 
 
     <div class="social">          
       <a href="https://github.com/euchico" target="_blank">
         <img src="images/social-github.png" alt="GitHub: @euchico">
       </a>
 
-      <a href="https://mastodon.social/@euchico" rel="me" target="_blank">
-        <img src="images/social-mastodon.png" alt="Mastodon: @euchico">
-      </a>
-
       <a href="https://www.linkedin.com/in/euchico/" target="_blank">
         <img src="images/social-linkedin.png" alt="LinkedIn: @euchico">
+      </a>
+
+      <a href="https://www.instagram.com/eu.chico/" target="_blank">
+        <img src="images/social-instagram-1.png" alt="Instagram: @eu.chico">
       </a>
     </div>
   </footer>
