--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
         <img src="images/social-github.png" alt="GitHub: @euchico">
       </a>
 
-      <a href="https://mastodon.social/@euchico" rel="me" target="_blank">
-        <img src="images/social-mastodon.png" alt="Mastodon: @euchico">
-      </a>
-
       <a href="https://www.linkedin.com/in/euchico/" target="_blank">
         <img src="images/social-linkedin.png" alt="LinkedIn: @euchico">
+      </a>
+
+      <a href="https://www.instagram.com/eu.chico/" target="_blank">
+        <img src="images/social-instagram-1.png" alt="Instagram: @eu.chico">
       </a>
     </div>
   </footer>
