--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- METAs -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-br">
