Simplificação e finalização da versão do site

--- a/curriculo.html
+++ b/curriculo.html
@@ -63,7 +63,7 @@
     <div id="collapsingNavbar" class="navbar-collapse collapse ">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item color-nv1"><a class="nav-link txt-up" href="sobre">sobre</a></li>
-        <li class="nav-item color-nv1"><a class="nav-link txt-up" href="blog">blog</a></li>
+        <!-- <li class="nav-item color-nv1"><a class="nav-link txt-up" href="blog">blog</a></li> -->
         <li class="nav-item color-nv1"><a class="nav-link txt-bold txt-up" href="curriculo">currículo</a></li>
       </ul>
     </div>
@@ -147,34 +147,6 @@
         <!-- ÁREA: EXPERIÊNCIAS -->
         <section class="information color-nv1 bg-color-nv5">
           <h4 class="information-title">Experiências</h4>
-
-          <!-- EXPERIÊNCIA 0 
-          <div id="collapse" class="info-collapse">
-            <a href="#collapse-0" class="d-block h-100" data-toggle="collapse" data-parent="#collapse">
-              <div class="row no-gutters">
-                <div class="col-sm-3 d-none d-sm-block">
-                  <span class="float-left collapse-date">Presente</span>
-                </div>
-                
-                <div class="col-10 col-sm-8">
-                  <div class="d-inline-block collapse-area">
-                    <span class="collapse-title">Freelance</span>
-                  </div>
-                </div>
-                
-                <div class="col-2 col-sm-1">
-                  <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down color-nv3"></i>
-                </div>
-              </div>
-            </a>
-
-            <div id="collapse-0" class="collapse">
-              <p class="text-justify">
-                Trabalho com desenvolvimento de websites, hotsites, landing page e blogs com foco em proporcionar uma boa experiência do usuário. Em todos os projetos, através de um design responsivo e utilizando novas tecnologias, busco estabelecer um bom desempenho dos mecanismos de busca, como Google, fortalecendo assim a marca do cliente.
-              </p>
-            </div>
-          </div>
-          EXPERIÊNCIA 0 -->
 
           <!-- EXPERIÊNCIA 1 -->
           <div id="collapse" class="info-collapse">
@@ -404,28 +376,18 @@
           <h4 class="information-title">Outros Interesses</h4>
 
           <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-12">
               <strong class="">Arte</strong>
               <hr class="hr-type1 color-nv4">
 
               <p>
                 O desenho sempre fez parte da minha vida, em certos momentos de forma séria e outros por diversão. 
-                Com isso, posso falar que arte é algo fundamental para mim e gosto de compartilhar alguns estudos de desenhos no <strong><a href="https://www.instagram.com/euchico.artes/" target="_blank">Instagram</a></strong>.
+                Com isso, posso falar que arte é algo fundamental para mim e gosto de compartilhar alguns estudos de desenhos no <strong><a href="https://www.instagram.com/euchico.jpg" target="_blank">Instagram</a></strong>.
               </p>
-            </div>
-
-            <div class="col-sm-6">
-              <strong class="">Blog</strong>
-              <hr class="hr-type1 color-nv4">
-
-              <p>
-                Eventualmente gosto de escrever alguns pensamentos e ideias pessoais, mas nunca formalizei ou compartilhei. 
-                Vou organizar um <strong><a href="blog.html" target="_self">Blog</a></strong> para registrar minha trajetória de estudos e busca profissional na área de Desenvolvimento Web.</p>
             </div>
           </div>
         </section>
         <!-- / ÁREA: OUTROS INTERESSES -->
-
       </div>
       <!-- / INFORMAÇÕES -->
 
