--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
     <div id="collapsingNavbar" class="navbar-collapse collapse ">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item color-nv1"><a class="nav-link txt-up" href="sobre">sobre</a></li>
-        <li class="nav-item color-nv1"><a class="nav-link txt-up" href="blog">blog</a></li>
         <li class="nav-item color-nv1"><a class="nav-link txt-bold txt-up" href="curriculo">currículo</a></li>
       </ul>
     </div>
@@ -74,18 +73,14 @@
 
   <!-- CABEÇALHO -->
   <header class="container">
-    <div class="row">
-      <div class="col-md-7">
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center ">
         <h2 class="color-nv1">Francisco de Paula</h2>
         <h3 class="color-nv2">Desenvolvedor Web</h3>
-        <hr class="hr-type1 color-nv4">
+        <hr class="hr-type1 color-nv4 mx-auto ">
         <p class="txt-featured color-nv2">
           Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.
         </p>
-      </div>
-
-      <div class="col-md-5">
-        <img class="img-profile" src="images/euchico-perfil-1.jpg" alt="Arte Avatar euChico">
       </div>
     </div>
 
@@ -97,32 +92,6 @@
   <section class="container">
     <div class="row">
       <!-- TRABALHO 1 -->
-      <div class="col-md-6" >
-        <a href="#">
-          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
-          <div class="col-md-12 job job-type1" >
-            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
-          </div>
-        </a>
-      </div>
-      <!-- / TRABALHO 1 -->
-
-      <!-- TRABALHO 2 -->
-      <div class="col-md-6 m-adjust-mobile">
-        <a href="#">
-          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
-          <div class="col-md-12 job job-type1">
-            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
-          </div>
-        </a> 
-      </div>
-      <!-- / TRABALHO 2 -->
-    </div>
-
-    <div class="row">
-      <!-- TRABALHO 3 -->
       <div class="col-md-12">
         <a href="http://moemasantiago.com/" target="_blank">
           <div class="col-md-12 job job-type2" style="background:transparent url('images/freelance.jpg') no-repeat center center /cover">
@@ -132,10 +101,10 @@
         </a>
       </div>
     </div>
-    <!-- / TRABALHO 3 -->
+    <!-- / TRABALHO 1 -->
 
     <div class="row hidden-mobile">
-      <!-- TRABALHO 4 -->
+      <!-- TRABALHO 2 -->
       <div class="col-md-4">
         <a href="https://github.com/euchico/webdev-study" target="_blank">
           <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-study.jpg') no-repeat center center /cover">
@@ -144,9 +113,9 @@
           </div>
         </a>
       </div>
-      <!-- / TRABALHO 4 -->
+      <!-- / TRABALHO 2 -->
 
-      <!-- TRABALHO 5 -->
+      <!-- TRABALHO 3 -->
       <div class="col-md-4 m-adjust-mobile">
         <a href="https://github.com/euchico/webdev-challenge" target="_blank">
           <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-challenge.jpg') no-repeat center center /cover">
@@ -155,18 +124,18 @@
           </div>
         </a>
       </div>
-      <!-- / TRABALHO 5 -->
+      <!-- / TRABALHO 3 -->
 
-      <!-- TRABALHO 6 -->
+      <!-- TRABALHO 4 -->
       <div class="col-md-4 m-adjust-mobile">
-        <a href="https://github.com/euchico/webdev-cookbook" target="_blank">
+        <a href="https://euchico.github.io/webdev-cookbook/" target="_blank">
           <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-cookbook.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
           </div>
         </a>
       </div>
-      <!-- / TRABALHO 6 -->
+      <!-- / TRABALHO 4 -->
     </div>  
   </section>
   <!-- / SEÇÃO: PORTFÓLIO -->
